added text to (hopefully) make the code understandable to a general audience.

--- a/sliderule_query.ipynb
+++ b/sliderule_query.ipynb
@@ -13,6 +13,10 @@
    "id": "a0e9c31a-db01-487f-a265-847a46b9609b",
    "metadata": {},
    "source": [
+    "ICESat-2 has several products that could potentially be used to retrieve surface height and snow depth over the SnowEx Alaska sites. The ATL03 product has the finest along-track resolution at 0.7 m, but it is also very noisy without filtering. The ATL06 and ATL08 products are less noisy, and ATL08 can be used to differentiate between vegetation and bare earth, but both are at a coarser resolution than ATL03 (40 m and 100 m, respectively).\n",
+    "\n",
+    "SlideRule is an ICESat-2 data querying tool that offers a compromise between ATL03 and the higher-level products. It allows users to access ICESat-2 data through the cloud, given spatial bounds and a set of data parameters. Crucially, it also processes ATL03 data in a manner similar to ATL06 (i.e. line segments generated from aggregated signal photons), though the user has more flexibility in the along-track resolution and photon selection criteria (see below).\n",
+    "\n",
     "This is a short Jupyter Notebook designed to show how SlideRule could be used to reduce noise in ICESat-2 ATL03 data. We will use Creamer's Field, AK as a testbed."
    ]
   },
@@ -107,7 +111,16 @@
    "id": "d2856268-b169-4c0e-967d-b731177754d7",
    "metadata": {},
    "source": [
-    "We are now going to build TWO SlideRule requests over Creamer's Field. The first one will include all signal photons (high, medium, low) and will not filter out tree canopies. The second query will only include high-confidence signal photons that are recognized as \"ground\" photons by the ATL08 algorithm."
+    "We are now going to build TWO SlideRule requests over Creamer's Field. The first one will include all signal photons (high, medium, low) and will not filter out tree canopies. The second query will only include high-confidence signal photons that are recognized as \"ground\" photons by the ATL08 algorithm.\n",
+    "\n",
+    "A brief rundown of each of the parameters given below:\n",
+    "* \"poly\": The polygon defining our region of interest (defined above as \"region\")\n",
+    "* \"srt\": The surface type: land, land ice, sea ice, ocean, or inland water.\n",
+    "* \"cnf\": Confidence level of the retrieved ICESat-2 photons. The lower the confidence threshold, generally the noisier the data.\n",
+    "* \"ats\": Minimum along-track spread (uncertainty) in photon aggregates (units of meters).\n",
+    "* \"len\": Length of line segments of photon aggregates (units of meters).\n",
+    "* \"res\": Distance between line segment midpoints, or along-track resolution (units of meters).\n",
+    "* \"maxi\": Maximum number of times for the SlideRule algorithm to process photon aggregates into elevation estimates."
    ]
   },
   {
@@ -648,17 +661,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "id": "c6aded65-382d-467a-b67d-02babc79459c",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>delta_time</th>\n",
+       "      <th>w_surface_window_final</th>\n",
+       "      <th>cycle</th>\n",
+       "      <th>h_sigma</th>\n",
+       "      <th>rms_misfit</th>\n",
+       "      <th>n_fit_photons</th>\n",
+       "      <th>dh_fit_dy</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>dh_fit_dx</th>\n",
+       "      <th>h_mean</th>\n",
+       "      <th>spot</th>\n",
+       "      <th>gt</th>\n",
+       "      <th>pflags</th>\n",
+       "      <th>rgt</th>\n",
+       "      <th>segment_id</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-14 20:43:29.068930840</th>\n",
+       "      <td>3.273381e+07</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.024183</td>\n",
+       "      <td>0.281941</td>\n",
+       "      <td>146</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.230491e+06</td>\n",
+       "      <td>0.008292</td>\n",
+       "      <td>146.621707</td>\n",
+       "      <td>5</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>266</td>\n",
+       "      <td>360691</td>\n",
+       "      <td>POINT (-147.69996 64.85879)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-14 20:43:29.070333920</th>\n",
+       "      <td>3.273381e+07</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.015122</td>\n",
+       "      <td>0.188096</td>\n",
+       "      <td>156</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.230501e+06</td>\n",
+       "      <td>0.030736</td>\n",
+       "      <td>146.826239</td>\n",
+       "      <td>5</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>266</td>\n",
+       "      <td>360692</td>\n",
+       "      <td>POINT (-147.69998 64.85888)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-14 20:43:29.071737356</th>\n",
+       "      <td>3.273381e+07</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.026319</td>\n",
+       "      <td>0.290546</td>\n",
+       "      <td>144</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.230511e+06</td>\n",
+       "      <td>-0.005674</td>\n",
+       "      <td>146.921460</td>\n",
+       "      <td>5</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>266</td>\n",
+       "      <td>360692</td>\n",
+       "      <td>POINT (-147.70001 64.85897)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-14 20:43:29.073143596</th>\n",
+       "      <td>3.273381e+07</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.072318</td>\n",
+       "      <td>0.316879</td>\n",
+       "      <td>62</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.230521e+06</td>\n",
+       "      <td>-0.044433</td>\n",
+       "      <td>146.586641</td>\n",
+       "      <td>5</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>266</td>\n",
+       "      <td>360693</td>\n",
+       "      <td>POINT (-147.70003 64.85906)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-14 20:43:29.075889484</th>\n",
+       "      <td>3.273381e+07</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.016113</td>\n",
+       "      <td>0.268437</td>\n",
+       "      <td>351</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.230541e+06</td>\n",
+       "      <td>-0.035369</td>\n",
+       "      <td>146.310670</td>\n",
+       "      <td>5</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>266</td>\n",
+       "      <td>360694</td>\n",
+       "      <td>POINT (-147.70008 64.85923)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(457, 16)"
+       "                                 delta_time  w_surface_window_final  cycle  \\\n",
+       "time                                                                         \n",
+       "2019-01-14 20:43:29.068930840  3.273381e+07                     3.0      2   \n",
+       "2019-01-14 20:43:29.070333920  3.273381e+07                     3.0      2   \n",
+       "2019-01-14 20:43:29.071737356  3.273381e+07                     3.0      2   \n",
+       "2019-01-14 20:43:29.073143596  3.273381e+07                     3.0      2   \n",
+       "2019-01-14 20:43:29.075889484  3.273381e+07                     3.0      2   \n",
+       "\n",
+       "                                h_sigma  rms_misfit  n_fit_photons  dh_fit_dy  \\\n",
+       "time                                                                            \n",
+       "2019-01-14 20:43:29.068930840  0.024183    0.281941            146        0.0   \n",
+       "2019-01-14 20:43:29.070333920  0.015122    0.188096            156        0.0   \n",
+       "2019-01-14 20:43:29.071737356  0.026319    0.290546            144        0.0   \n",
+       "2019-01-14 20:43:29.073143596  0.072318    0.316879             62        0.0   \n",
+       "2019-01-14 20:43:29.075889484  0.016113    0.268437            351        0.0   \n",
+       "\n",
+       "                                   distance  dh_fit_dx      h_mean  spot  gt  \\\n",
+       "time                                                                           \n",
+       "2019-01-14 20:43:29.068930840  7.230491e+06   0.008292  146.621707     5  50   \n",
+       "2019-01-14 20:43:29.070333920  7.230501e+06   0.030736  146.826239     5  50   \n",
+       "2019-01-14 20:43:29.071737356  7.230511e+06  -0.005674  146.921460     5  50   \n",
+       "2019-01-14 20:43:29.073143596  7.230521e+06  -0.044433  146.586641     5  50   \n",
+       "2019-01-14 20:43:29.075889484  7.230541e+06  -0.035369  146.310670     5  50   \n",
+       "\n",
+       "                               pflags  rgt  segment_id  \\\n",
+       "time                                                     \n",
+       "2019-01-14 20:43:29.068930840       0  266      360691   \n",
+       "2019-01-14 20:43:29.070333920       0  266      360692   \n",
+       "2019-01-14 20:43:29.071737356       0  266      360692   \n",
+       "2019-01-14 20:43:29.073143596       0  266      360693   \n",
+       "2019-01-14 20:43:29.075889484       0  266      360694   \n",
+       "\n",
+       "                                                  geometry  \n",
+       "time                                                        \n",
+       "2019-01-14 20:43:29.068930840  POINT (-147.69996 64.85879)  \n",
+       "2019-01-14 20:43:29.070333920  POINT (-147.69998 64.85888)  \n",
+       "2019-01-14 20:43:29.071737356  POINT (-147.70001 64.85897)  \n",
+       "2019-01-14 20:43:29.073143596  POINT (-147.70003 64.85906)  \n",
+       "2019-01-14 20:43:29.075889484  POINT (-147.70008 64.85923)  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +876,7 @@
     "rgt_pd = df[df['rgt']==rgt]\n",
     "rgt_pd2 = df2[df2['rgt']==rgt]\n",
     "\n",
-    "np.shape(rgt_pd2.loc['2021-07'])"
+    "rgt_pd.head()"
    ]
   },
   {
@@ -768,12 +975,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56bc1207-f667-4cc4-87e4-f3d903ceb137",
+   "cell_type": "markdown",
+   "id": "448ba25a-d8af-4565-953e-67be056106a7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## References\n",
+    "Shean et al., (2023). SlideRule: Enabling rapid, scalable, open science for the NASA ICESat-2 mission and beyond. Journal of Open Source Software, 8(81), 4982, https://doi.org/10.21105/joss.04982"
+   ]
   },
   {
    "cell_type": "code",
@@ -784,11 +992,9 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55d47935-ede6-41c7-9928-b4771135b558",
+   "cell_type": "markdown",
+   "id": "856daac8-a89a-4bfb-b115-b92b7e4b87ab",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
