Added geoviews snow depth plot. Still having server error. Will check on that and clean up the notebooks on Monday.

--- a/sliderule_query.ipynb
+++ b/sliderule_query.ipynb
@@ -355,7 +355,7 @@
     "                             ('h_mean', '@h_mean'),\n",
     "                             ('rgt', '@rgt')])\n",
     "\n",
-    "lidar_boxes = gpd.read_file('snowex_lidar_swaths.shp')\n",
+    "lidar_boxes = gpd.read_file('/home/jovyan/icesat2-snowex/jsons-shps/snowex_lidar_swaths.shp')\n",
     "lidar_boxes_poly = gv.Polygons(lidar_boxes).opts(color='white', \n",
     "                                                 alpha=0.5)\n",
     "\n",
@@ -382,6 +382,18 @@
     "# Save the DataFrame to a CSV file\n",
     "df2.to_csv(r'is2_atl03sl_%s.csv' %(field_id))\n",
     "#rgt_pd2.to_csv(r'is2_atl03sl_%s_rgt%s.csv' %(field_id, rgt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a3b1677-1c6c-4aca-95a5-deda5f5969a6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "rgt_pd2.head()"
    ]
   },
   {
