Added cell to make a scatter plot and PDF curve of snow depth.

--- a/is2_snowex_ak.ipynb
+++ b/is2_snowex_ak.ipynb
@@ -21,6 +21,8 @@
    "source": [
     "# General packages\n",
     "import geopandas as gpd\n",
+    "import holoviews as hv\n",
+    "from holoviews import opts, Cycle\n",
     "import icepyx as ipx\n",
     "from is2_cloud_access import atl03q, atl06q, atl08q\n",
     "import lidar_processing as lp\n",
@@ -34,6 +36,7 @@
     "from shapely.geometry import Polygon, Point\n",
     "import sys\n",
     "import xarray as xr\n",
+    "hv.extension('bokeh')\n",
     "\n",
     "# SlideRule-relevant packages\n",
     "import ipywidgets as widgets\n",
@@ -87,7 +90,10 @@
     "\n",
     "# Desired RGT and date range for queries (needed to filter SlideRule and for icepyx query)\n",
     "date_range = ['2022-03-01', '2022-04-30']\n",
-    "rgt = '1097'"
+    "rgt = '1097'\n",
+    "\n",
+    "# Save the data to a CSV?\n",
+    "saving = True"
    ]
   },
   {
@@ -422,8 +428,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e1b6e6d1-79d6-4633-9b22-82434b38f916",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": [
+    "## Saving snow depth data\n",
+    "The final aim for this notebook is to develop an ICESat-2 snow depth \"product\" over the Alaska field sites. This is still very much a work in progress, but the section still allows for saving of derived snow depth data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f848d7e-1ab6-4bac-a554-500c8db0f446",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Save derived snow depth data in .csv format\n",
+    "atl03_uaf_filtered.to_csv(f'atl03_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')\n",
+    "atl06_uaf_filtered.to_csv(f'atl06_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')\n",
+    "atl08_uaf_filtered.to_csv(f'atl08_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2cccd7dc-f9f6-49e1-89bd-356a06f880c9",
    "metadata": {
+    "tags": [],
     "user_expressions": []
    },
    "source": [
@@ -506,42 +539,26 @@
    },
    "outputs": [],
    "source": [
-    "print(np.shape(atl03_uaf_filtered))\n",
-    "print(np.shape(atl06_uaf_filtered))\n",
-    "print(np.shape(atl08_uaf_filtered))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e1b6e6d1-79d6-4633-9b22-82434b38f916",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "## Saving snow depth data\n",
-    "The final aim for this notebook is to develop an ICESat-2 snow depth \"product\" over the Alaska field sites. This is still very much a work in progress, but the section still allows for saving of derived snow depth data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f848d7e-1ab6-4bac-a554-500c8db0f446",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "saving = True\n",
+    "# Generate histogram bins for ICESat-2 snow depth data\n",
+    "freq, edges = np.histogram(atl03_uaf_filtered['residual'], 100)\n",
+    "freq06, edges06 = np.histogram(atl06_uaf_filtered['residual'], 100)\n",
+    "freq08, edges08 = np.histogram(atl08_uaf_filtered['residual'], 100)\n",
+    "frequaf, edgesuaf = np.histogram(atl03_uaf_filtered['lidar_snow_depth'][abs(atl03_uaf_filtered['lidar_snow_depth'])<3], 100)\n",
     "\n",
-    "# Setup a time string\n",
-    "time_str = str(atl03_uaf_filtered.index[0].year) + \\\n",
-    "           str(atl03_uaf_filtered.index[0].month) + \\\n",
-    "           str(atl03_uaf_filtered.index[0].day)\n",
+    "# Generate scatter plot for UAF vs. ICESat-2 snow depth\n",
+    "scatter = atl03_uaf_filtered.hvplot(kind='scatter', x='lidar_snow_depth', y='residual', label='ATL03', alpha=0.5)\n",
+    "scatter06 = atl06_uaf_filtered.hvplot(kind='scatter', x='lidar_snow_depth', y='residual', label='ATL06', alpha=0.5)\n",
+    "scatter08 = atl08_uaf_filtered.hvplot(kind='scatter', x='lidar_snow_depth', y='residual', label='ATL08', alpha=0.5)\n",
+    "scatters = (scatter*scatter06*scatter08).opts(xlabel='UAF snow depth [m]', ylabel='ICESat-2 snow depth [m]')\n",
     "\n",
-    "# Save derived snow depth data in .csv format\n",
-    "atl03_uaf_filtered.to_csv(f'atl03_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')\n",
-    "atl06_uaf_filtered.to_csv(f'atl06_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')\n",
-    "atl08_uaf_filtered.to_csv(f'atl08_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')"
+    "# Generate PDF curves for snow depth\n",
+    "curves = (hv.Distribution((edges, freq), label='ATL03').opts(bandwidth=0.6)) * \\\n",
+    "         (hv.Distribution((edges06, freq06), label='ATL06').opts(bandwidth=0.6)) * \\\n",
+    "         (hv.Distribution((edges08, freq08), label='ATL08').opts(bandwidth=0.6)) * \\\n",
+    "         (hv.Distribution((edgesuaf, frequaf), label='UAF').opts(bandwidth=0.6))\n",
+    "curves.opts(xlabel='Snow depth [m]', ylabel='PDF')\n",
+    "\n",
+    "scatters + curves"
    ]
   },
   {
