Added land cover information to ATL03 snow depth files.

--- a/is2_snowex_ak.ipynb
+++ b/is2_snowex_ak.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "# Field site ID\n",
-    "field_id = 'cffl'\n",
+    "field_id = 'bcef'\n",
     "\n",
     "# Snow-on (True) or snow-off (False) analysis\n",
     "snow_on = True\n",
@@ -91,7 +91,7 @@
     "\n",
     "# Desired RGT and date range for queries (needed to filter SlideRule and for icepyx query)\n",
     "date_range = ['2022-03-01', '2022-04-30']\n",
-    "rgt = '1356'\n",
+    "rgt = '472'\n",
     "\n",
     "# Save the data to a CSV?\n",
     "saving = True"
@@ -429,48 +429,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1b6e6d1-79d6-4633-9b22-82434b38f916",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "## Saving snow depth data\n",
-    "The final aim for this notebook is to develop an ICESat-2 snow depth \"product\" over the Alaska field sites. This is still very much a work in progress, but the section still allows for saving of derived snow depth data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "739a84a9-4f01-4d7f-8a38-307bbcbb9bb4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "time_str = str(atl03.index.year[0]) + \\\n",
-    "           str(atl03.index.month[0]) + \\\n",
-    "           str(atl03.index.day[0])\n",
-    "\n",
-    "print(time_str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f848d7e-1ab6-4bac-a554-500c8db0f446",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Save derived snow depth data in .csv format\n",
-    "atl03_uaf_filtered.to_csv(f'atl03_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')\n",
-    "atl06_uaf_filtered.to_csv(f'atl06_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')\n",
-    "atl08_uaf_filtered.to_csv(f'atl08_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2cccd7dc-f9f6-49e1-89bd-356a06f880c9",
    "metadata": {
     "tags": [],
@@ -765,23 +723,94 @@
    "outputs": [],
    "source": [
     "# Add land cover data to DataFrame\n",
-    "atl03_uaf_filtered['land_cover'] = pd.read_table(f'coregistered_nlcd_{field_id}.txt', header=None).values"
+    "atl03_uaf_filtered['land_cover_value'] = pd.read_table(f'coregistered_nlcd_{field_id}.txt', header=None).values\n",
+    "\n",
+    "# Translate values into land cover classification\n",
+    "nlcd_legend = pd.read_csv('/home/jovyan/icesat2-snowex/jsons-shps/land-cover-maps/NLCD_landcover_legend_2018_12_17_39kiznbMV7t0juCIU61D.csv',\n",
+    "                          header=0)\n",
+    "\n",
+    "atl03_uaf_filtered['land_cover'] = ''\n",
+    "for i,value in enumerate(atl03_uaf_filtered['land_cover_value']):\n",
+    "    # Arctic Coastal Plain has some unclassified values, so choosing the nearest land cover type\n",
+    "    if value == 51.0:\n",
+    "        atl03_uaf_filtered['land_cover'][i] = 'Shrub/Scrub'\n",
+    "    elif value == 72.0:\n",
+    "        atl03_uaf_filtered['land_cover'][i] = 'Herbacious'\n",
+    "    else:\n",
+    "        atl03_uaf_filtered['land_cover'][i] = nlcd_legend['Legend'][nlcd_legend['Value']==value]\n",
+    "\n",
+    "atl03_uaf_filtered['land_cover']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bf138f3-97e7-449f-86cd-57e9b528f725",
-   "metadata": {},
+   "id": "1be83f78-0619-4183-ade7-634ac4008a33",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "atl03_uaf_filtered['land_cover'].head()"
+    "atl03_uaf_filtered.plot.scatter(x='y', y='land_cover_value')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d34eb6fb-c710-4cfa-a363-a76ce15ad7d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atl03_uaf_filtered.plot.scatter(x='land_cover_value', y='h_sigma')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efffb0db-c16d-4306-98a7-8ddddd085e7a",
+   "metadata": {
+    "tags": [],
+    "user_expressions": []
+   },
+   "source": [
+    "## Saving snow depth data\n",
+    "The final aim for this notebook is to develop an ICESat-2 snow depth \"product\" over the Alaska field sites. This is still very much a work in progress, but the section still allows for saving of derived snow depth data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "739a84a9-4f01-4d7f-8a38-307bbcbb9bb4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "time_str = str(atl03.index.year[0]) + \\\n",
+    "           str(atl03.index.month[0]) + \\\n",
+    "           str(atl03.index.day[0])\n",
+    "\n",
+    "print(time_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f848d7e-1ab6-4bac-a554-500c8db0f446",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Save derived snow depth data in .csv format\n",
+    "atl03_uaf_filtered.to_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_id}/atl03_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')\n",
+    "atl06_uaf_filtered.to_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_id}/atl06_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')\n",
+    "atl08_uaf_filtered.to_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_id}/atl08_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a73ec9a-00ef-43bd-98a2-bfab2a4d53d8",
    "metadata": {},
    "outputs": [],
    "source": []
