Added Caribou Creek (CPCRW) as an acceptable site input. Added plots for snow-off analysis, and cleaned up the plotting section a bit.

--- a/is2_snowex_ak.ipynb
+++ b/is2_snowex_ak.ipynb
@@ -139,14 +139,22 @@
     "    \n",
     "    # Vertical datum correction factor\n",
     "    lidar_correction_factor = 9.9\n",
-    "    print('CAUTION: ICESat-2/UAF calibration has not been performed for this field site. Snow-off results may be inaccurate.')"
+    "    print('CAUTION: ICESat-2/UAF calibration has not been performed for this field site. Snow-off results may be inaccurate.')\n",
+    "elif field_id == 'cpcrw':\n",
+    "    f_snow_off = '%s/lidar-dems/caribou_2022may29_dtm_3m.tif' %(path)\n",
+    "    f_snow_on = '%s/lidar-dems/caribou_2022mar11_snowdepth_3m.tif' %(path)\n",
+    "    \n",
+    "    # Vertical datum correction factor\n",
+    "    lidar_correction_factor = 10.04"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2bfdf5d1-a4f8-4e40-8be2-06917327401f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Read lidar DEMs into xarray (rasterio) format\n",
@@ -492,19 +500,30 @@
     "                             ('is2_snow_depth', '@residual')])\n",
     "lidar_boxes_poly = gv.Polygons(lidar_boxes).opts(color='white',\n",
     "                                                 alpha=0.5)\n",
-    "points_on_map = gv.Points(atl03_uaf_gpd, \n",
-    "                           kdmins=['Longitude', 'Latitude'],\n",
-    "                           vdmins=['residual']).opts(tools=[hover],\n",
-    "                                                     color_index='residual',\n",
-    "                                                     colorbar=True,\n",
-    "                                                     clabel='IS-2 snow depth [m]',\n",
-    "                                                     size=4.0)\n",
+    "if not snow_on:\n",
+    "    # ICESat-2/UAF snow-off residual map\n",
+    "    points_on_map = gv.Points(atl03_uaf_gpd, \n",
+    "                               kdmins=['Longitude', 'Latitude'],\n",
+    "                               vdmins=['residual']).opts(tools=[hover],\n",
+    "                                                         color_index='residual',\n",
+    "                                                         colorbar=True,\n",
+    "                                                         clabel='IS2-UAF height residual [m]',\n",
+    "                                                         size=4.0,\n",
+    "                                                         fontscale=1.5)\n",
+    "elif snow_on:\n",
+    "    # ICESat-2 snow depth map\n",
+    "    points_on_map = gv.Points(atl03_uaf_gpd, \n",
+    "                               kdmins=['Longitude', 'Latitude'],\n",
+    "                               vdmins=['residual']).opts(tools=[hover],\n",
+    "                                                         color_index='residual',\n",
+    "                                                         colorbar=True,\n",
+    "                                                         clabel='IS-2 snow depth [m]',\n",
+    "                                                         size=4.0,\n",
+    "                                                         fontscale=1.5)\n",
     "\n",
     "\n",
     "projected = gv.operation.project(points_on_map, projection=crs.GOOGLE_MERCATOR)\n",
-    "#world_map = gts.EsriImagery.opts(width=600, height=570) * gts.StamenLabels.options(level='annotation')\n",
     "world_map = gts.EsriImagery.opts(width=600, height=570)\n",
-    "#world_map = world_map\n",
     "\n",
     "map_fig = (world_map * lidar_boxes_poly * projected).opts(xlim=(projected.data.Longitude.min()-10000, projected.data.Longitude.max()+10000),\n",
     "                                                          ylim=(projected.data.Latitude.min()-10000, projected.data.Latitude.max()+10000))\n",
@@ -541,6 +560,172 @@
     "hv.save(map_fig,\n",
     "        f'/home/jovyan/icesat2-snowex/figures/atl03_snowdepth_map_rgt{rgt}_{field_id}_{time_str}.html')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e852bcce-5136-4dab-8656-6d86fc1d1bdb",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e94d3354-0370-4507-bd43-3d201459ad48",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34159afc-8bac-4d4b-85e6-72d81cc004c9",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb383bed-86d5-4e8c-9acf-feb9794e3813",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Line plots of along-track surface heights\n",
+    "atl03_beam = atl03_uaf_filtered[atl03_uaf_filtered.beam=='3']\n",
+    "atl06_beam = atl06_uaf_filtered[atl06_uaf_filtered.beam=='3']\n",
+    "atl08_beam = atl08_uaf_filtered[atl08_uaf_filtered.beam=='3']\n",
+    "\n",
+    "line03 = atl03_beam.hvplot(x='lat', y='is2_height', label='ICESat-2')\n",
+    "line06 = atl06_beam.hvplot(x='lat', y='is2_height')\n",
+    "line08 = atl08_beam.hvplot(x='lat', y='is2_height')\n",
+    "\n",
+    "lineuaf_atl03 = atl03_beam.hvplot(x='lat', y='lidar_height', label='UAF')\n",
+    "lineuaf_atl06 = atl06_beam.hvplot(x='lat', y='lidar_height')\n",
+    "lineuaf_atl08 = atl08_beam.hvplot(x='lat', y='lidar_height')\n",
+    "\n",
+    "line_plots03 = (line03 * lineuaf_atl03).opts(xlabel=' ', ylabel='Elevation [m]',\n",
+    "                                                          xlim=(64.696,64.738),\n",
+    "                                                          ylim=(100,250),\n",
+    "                                                          fontscale=1.5)\n",
+    "line_plots06 = (line06 * lineuaf_atl06).opts(xlabel=' ', ylabel='Elevation [m]',\n",
+    "                                                          xlim=(64.696,64.738),\n",
+    "                                                          fontscale=1.5)\n",
+    "line_plots08 = (line08 * lineuaf_atl08).opts(xlabel='Latitude', ylabel='Elevation [m]',\n",
+    "                                                          xlim=(64.696,64.738),\n",
+    "                                                          fontscale=1.5)\n",
+    "\n",
+    "all_lines = (line_plots03 + line_plots06 + line_plots08).opts(shared_axes=True).cols(1)\n",
+    "\n",
+    "all_lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9c9868b-dbcb-42e4-8932-340f3907653e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.save(all_lines,\n",
+    "        f'/home/jovyan/icesat2-snowex/figures/is2_elevation_lineplots_rgt{rgt}_{field_id}_{time_str}.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb01a26d-a884-4373-8daa-4fd549b79f60",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17bc34e5-6e46-4d08-bf67-1f1149f64e2e",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1756de04-02e0-4d80-b52c-98ece82b3816",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ba8f684-4b34-4db7-a435-ce05ecf90333",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Line plots of along-track snow-off residuals\n",
+    "resi03 = atl03_beam.hvplot(x='lat', y='residual', label='ATL03')\n",
+    "resi06 = atl06_beam.hvplot(x='lat', y='residual', label='ATL06')\n",
+    "resi08 = atl08_beam.hvplot(x='lat', y='residual', label='ATL08')\n",
+    "\n",
+    "residual_lines03 = (resi03).opts(xlabel=' ', ylabel='IS2-UAF height residual [m]',\n",
+    "                                                 xlim=(64.696,64.738),\n",
+    "                                                 ylim=(-1.25,1.25),\n",
+    "                                                 title=' ',\n",
+    "                                                 color='black',\n",
+    "                                                 fontscale=1.5)\n",
+    "residual_lines06 = (resi06).opts(xlabel=' ', ylabel='IS2-UAF height residual [m]',\n",
+    "                                                 xlim=(64.696,64.738),\n",
+    "                                                 ylim=(-1.25,1.25),\n",
+    "                                                 title=' ',\n",
+    "                                                 color='black',\n",
+    "                                                 fontscale=1.5)\n",
+    "residual_lines08 = (resi08).opts(xlabel='Latitude', ylabel='IS2-UAF height residual [m]',\n",
+    "                                                 xlim=(64.696,64.738),\n",
+    "                                                 ylim=(-1.25,1.25),\n",
+    "                                                 title=' ',\n",
+    "                                                 color='black',\n",
+    "                                                 fontscale=1.5)\n",
+    "\n",
+    "residual_lines = (residual_lines03+residual_lines06+residual_lines08).opts(shared_axes=True).cols(1)\n",
+    "\n",
+    "residual_lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7778f6b2-7b94-44d5-9bd3-83c62ebdcd3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.save(residual_lines,\n",
+    "        f'/home/jovyan/icesat2-snowex/figures/is2_elevation_residuals_rgt{rgt}_{field_id}_{time_str}.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "346d75aa-5958-4c72-9d45-9d02dd287013",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47ecb22c-703e-4ef7-b9cc-73a48a02291d",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c79f8c85-5e8c-4dad-9ed0-b7dc9bb05f12",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
   },
   {
    "cell_type": "code",
@@ -589,6 +774,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe510491-aecd-40fa-9619-c7dc2d048e71",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86b3f5a9-4b1c-43c7-8c98-287ca77fe1f6",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38faaeb0-eaa1-4bdb-88c0-a101b66dd659",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d3cfbf8b-a26b-4d3c-839c-105b5d6ff23a",
@@ -617,6 +826,30 @@
     "hv.save(line_plots,\n",
     "        f'/home/jovyan/icesat2-snowex/figures/is2_snowdepth_elevation_rgt{rgt}_{field_id}_{time_str}.html')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82e234c3-830a-4c08-8414-329e33b0e949",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3aa24de4-7b87-492e-b5b5-4b84a1bf6a75",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b10e34c7-67be-48d0-bf2e-814d73df1ba3",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
   },
   {
    "cell_type": "code",
@@ -650,6 +883,30 @@
     "hv.save(line_plots,\n",
     "        f'/home/jovyan/icesat2-snowex/figures/is2_snowdepth_lineplots_rgt{rgt}_{field_id}_{time_str}.html')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "913d25c9-23e6-4739-954d-ec3ddb314930",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89fa329a-ae9d-40b9-824c-7743a3c8a210",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2bccc11-b4a4-4a83-906e-b5838380c704",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": []
   },
   {
    "cell_type": "code",
